--- a/3-botstyle.css
+++ b/3-botstyle.css
@@ -392,8 +392,8 @@ blockquote,
 .blog .figure {
 	float: right;
 	margin-bottom: 0.5em;
-	margin-left: 2.55319149%;		/* 12px / 470px */
-	width: 49.14893617%;				/* 231px / 470px */
+	margin-left: 2.55319149%;	
+	width: 49.14893617%;
 }
 blockquote {
 	border-width: 1px 0;
